--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -70,7 +70,7 @@ PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
 AdditionalLaunchParametersForMobile=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 bAutoCompileBlueprintsOnLaunch=True
 bLaunchSeparateServer=False
@@ -144,6 +144,8 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -160,9 +162,68 @@ WorldSettings.Rendering=True
 WorldSettings.Audio=True
 WorldSettings.LODSystem=True
 WorldSettings.Tick=True
+ThirdPersonCharacter_C.Default=True
+ThirdPersonCharacter_C.Tick=True
+ThirdPersonCharacter_C.Character=True
+ThirdPersonCharacter_C.Camera=True
+ThirdPersonCharacter_C.Pawn=True
+ThirdPersonCharacter_C.Replication=True
+ThirdPersonCharacter_C.Rendering=True
+ThirdPersonCharacter_C.Collision=True
+ThirdPersonCharacter_C.Actor=True
+ThirdPersonCharacter_C.Input=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.MasterPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+PaperFlipbookComponent.Variable=True
+PaperFlipbookComponent.TransformCommon=True
+PaperFlipbookComponent.Sockets=True
+PaperFlipbookComponent.Sprite=True
+PaperFlipbookComponent.Materials=True
+PaperFlipbookComponent.ComponentTick=True
+PaperFlipbookComponent.Physics=True
+PaperFlipbookComponent.Collision=True
+PaperFlipbookComponent.Lighting=True
+PaperFlipbookComponent.Navigation=True
+PaperFlipbookComponent.Rendering=True
+PaperFlipbookComponent.VirtualTexture=True
+PaperFlipbookComponent.Tags=True
+PaperFlipbookComponent.ComponentReplication=True
+PaperFlipbookComponent.Activation=True
+PaperFlipbookComponent.Cooking=True
+PaperFlipbookComponent.Events=True
+PaperFlipbook.Sprite=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=334.400
@@ -1011,4 +1072,57 @@ SceneOutliner.TimeStamp=2021.01.19-13.16.53
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2021.01.19-13.16.50
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+
+[MRU]
+MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+
+[ContentBrowserRecent]
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/Flipbooks/Art/mouse_Flipbook
+
+[AssetEditorToolkitTabLocation]
+/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
+/Game/Flipbooks/Art/mouse_Flipbook.mouse_Flipbook=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+
+[PlacementMode]
+RecentlyPlaced=/Game/Flipbooks/Art/mouse_Flipbook.mouse_Flipbook;
+
+[SelectionDetails]
+PreserveScaleRatio=False
 
