--- a/A_Mouse_Tale/A_Mouse_Tale.uproject
+++ b/A_Mouse_Tale/A_Mouse_Tale.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{344B6DEF-4611-5A46-EDF7-8BA4095A0D92}",
+	"EngineAssociation": "4.26",
 	"Category": "",
 	"Description": ""
 }
