--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,6 +147,8 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
+ContentBrowserTab1.SelectedPaths=/Game
+None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab2.SourcesExpanded=True
@@ -415,13 +417,15 @@ ExponentialHeightFog.Activation=True
 ExponentialHeightFog.Cooking=True
 ExponentialHeightFog.Replication=True
 ExponentialHeightFog.Actor=True
+None=======
+MapBuildDataRegistry.Lighting=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 
 [RootWindow]
-ScreenPosition=X=579.000 Y=115.000
-WindowSize=X=1284.000 Y=724.000
+ScreenPosition=X=578.400 Y=114.400
+WindowSize=X=1285.600 Y=725.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -438,7 +442,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Unreal Projects/MouseTale/Mouse_Tale/A_Mouse_Tale/Content/Maps
+UNR=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -1285,7 +1289,7 @@ MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Maps/Swamp
-MRUItem1=/Game/StarterContent/Materials/M_Ground_Grass
+MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 MRUItem3=/Game/Flipbooks/Art/mouse_Flipbook
 
@@ -1293,6 +1297,8 @@ MRUItem3=/Game/Flipbooks/Art/mouse_Flipbook
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
 /Game/Flipbooks/Art/mouse_Flipbook.mouse_Flipbook=1
 /Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass=1
+None=======
+/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap_BuiltData.ThirdPersonExampleMap_BuiltData=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
