Finished swamp block out

--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -419,13 +419,14 @@ ExponentialHeightFog.Replication=True
 ExponentialHeightFog.Actor=True
 None=======
 MapBuildDataRegistry.Lighting=True
+GeomModifier_Clip.Settings=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=578.400 Y=114.400
-WindowSize=X=1287.200 Y=727.200
+ScreenPosition=X=578.000 Y=114.000
+WindowSize=X=1287.000 Y=727.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -442,7 +443,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
+UNR=../../../../../../Unreal Projects/MouseTale/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -1352,13 +1353,14 @@ InstalledPlugins=XRVisualization
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume=
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Object=
 GeomModifier_Pen="\"Object.Settings\" "
+GeomModifier_Clip="\"Object.Settings\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
