--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -425,8 +425,8 @@ GeomModifier_Clip.Settings=True
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=578.000 Y=114.000
-WindowSize=X=1287.000 Y=727.000
+ScreenPosition=X=577.600 Y=113.600
+WindowSize=X=1288.800 Y=728.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -443,7 +443,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Unreal Projects/MouseTale/Mouse_Tale/A_Mouse_Tale/Content/Maps
+UNR=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
