Show and Tell in class
Showing Dr Mec the first blockout.

--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -172,7 +172,7 @@ ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/Maps/Swamp
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -426,7 +426,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=577.600 Y=113.600
-WindowSize=X=1290.400 Y=730.400
+WindowSize=X=1292.000 Y=732.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -443,7 +443,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
+UNR=../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -1273,9 +1273,9 @@ HierarchicalLODOutliner.TimeStamp=2021.03.09-16.56.39
 HierarchicalLODOutliner.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2021.01.19-13.16.48
 BlueprintGraph.LastCompileMethod=Unknown
-Voice.TimeStamp=2021.03.09-13.24.09
+Voice.TimeStamp=2021.03.09-16.56.43
 Voice.LastCompileMethod=External
-MovieSceneCapture.TimeStamp=2021.03.09-13.23.52
+MovieSceneCapture.TimeStamp=2021.03.09-16.56.41
 MovieSceneCapture.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2021.03.09-13.23.40
 ExternalImagePicker.LastCompileMethod=Unknown
