--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -170,9 +170,11 @@ ContentBrowserTab2.ExpandedCollections=
 ContentBrowserTab2.ViewMode=0
 ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/Maps/Swamp
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -662,9 +664,41 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_InputAction.Input=True
+K2Node_SwitchInteger.PinOptions=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=2257.000 Y=149.000
@@ -1531,12 +1565,13 @@ MRUItem0=/Game/Maps/Swamp
 MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Flipbooks/Art/mouse
-MRUItem1=/Game/ThirdPersonBP/Flipbooks/Art/mouse_Sprite
-MRUItem2=/Game/Maps/Swamp
-MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem5=/Game/Flipbooks/Art/mouse_Flipbook
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/ThirdPersonBP/Flipbooks/Art/mouse
+MRUItem2=/Game/ThirdPersonBP/Flipbooks/Art/mouse_Sprite
+MRUItem3=/Game/ThirdPersonBP/Flipbooks/Art/mouse_Flipbook
+MRUItem4=/Game/Maps/Swamp
+MRUItem5=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem6=/Game/Flipbooks/Art/mouse_Flipbook
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -1546,6 +1581,7 @@ None=======
 /Game/ThirdPersonBP/Maps/ThirdPersonExampleMap_BuiltData.ThirdPersonExampleMap_BuiltData=1
 /Game/ThirdPersonBP/Flipbooks/Art/mouse_Sprite.mouse_Sprite=1
 /Game/ThirdPersonBP/Flipbooks/Art/mouse.mouse=1
+/Game/ThirdPersonBP/Flipbooks/Art/mouse_Flipbook.mouse_Flipbook=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1607,6 +1643,11 @@ GeomModifier="\"Object.Settings\" "
 Object=
 GeomModifier_Pen="\"Object.Settings\" "
 GeomModifier_Clip="\"Object.Settings\" "
+CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object.NavMovement.NavAgentProps\" "
+ActorComponent="\"Object.NavMovement.NavAgentProps\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1617,6 +1658,7 @@ ExtrudeCoordsWarning=True
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Materials=False
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
 
 [MaterialEditor]
 PrimType=1
