--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Flipbooks/Art
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -698,11 +698,11 @@ EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=2257.000 Y=149.000
-WindowSize=X=1292.000 Y=732.000
+ScreenPosition=X=372.800 Y=184.800
+WindowSize=X=1293.600 Y=733.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -729,7 +729,7 @@ GenericOpen=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 GenericSave=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 MeshImportExport=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 WorldRoot=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
-Level=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
+Level=../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
 Project=C:/Users/mrnav/Desktop/CSCI 347 G.P/UE_4.26/
 
 [ModuleFileTracking]
@@ -1547,8 +1547,8 @@ SceneOutliner.TimeStamp=2021.03.09-16.56.42
 SceneOutliner.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2021.03.09-16.56.39
 HierarchicalLODOutliner.LastCompileMethod=External
-BlueprintGraph.TimeStamp=2021.01.19-13.16.48
-BlueprintGraph.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2021.03.09-16.56.37
+BlueprintGraph.LastCompileMethod=External
 Voice.TimeStamp=2021.03.09-16.56.43
 Voice.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2021.03.09-16.56.41
@@ -1559,6 +1559,8 @@ HierarchicalLODUtilities.TimeStamp=2021.03.09-13.23.42
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2021.03.09-13.23.47
 MaterialEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2021.03.09-16.56.42
+TextureEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/Swamp
