Checking out pause menu

--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -774,12 +774,12 @@ MainMenu_C.Actor=True
 MainMenu_C.Input=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=372.000 Y=184.000
-WindowSize=X=1295.000 Y=735.000
-InitiallyMaximized=False
+WindowSize=X=1296.800 Y=736.800
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -795,7 +795,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Jeremy/Downloads/Mouse_Tale-main/Mouse_Tale-main/A_Mouse_Tale/Content/Maps
+UNR=../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -1637,6 +1637,8 @@ MaterialEditor.TimeStamp=2021.03.09-13.23.47
 MaterialEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2021.03.09-16.56.42
 TextureEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2021.03.09-16.56.42
+SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/Swamp
@@ -1644,11 +1646,11 @@ MRUItem1=/Game/Levels/MainMenu/MainMenu
 MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Swamp
-MRUItem1=/Game/Levels/MainMenu/MainMenu
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem1=/Game/UI/MainMenu
 MRUItem2=/Game/UI/PauseMenu
-MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem4=/Game/UI/MainMenu
+MRUItem3=/Game/Levels/MainMenu/MainMenu
+MRUItem4=/Game/Maps/Swamp
 MRUItem5=/Game/UI/NewWidgetBlueprint
 MRUItem6=/Game/ThirdPersonBP/Flipbooks/Art/mouse
 MRUItem7=/Game/ThirdPersonBP/Flipbooks/Art/mouse_Sprite
