--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Levels/MainMenu
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -772,13 +772,23 @@ MainMenu_C.Tick=True
 MainMenu_C.Replication=True
 MainMenu_C.Actor=True
 MainMenu_C.Input=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
-ScreenPosition=X=372.000 Y=184.000
-WindowSize=X=1296.800 Y=736.800
+ScreenPosition=X=205.000 Y=10.000
+WindowSize=X=1499.000 Y=1020.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -795,7 +805,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
+UNR=../../../../../../Users/Jeremy/Downloads/Mouse_Tale-main/Mouse_Tale-main/A_Mouse_Tale/Content/Levels/MainMenu
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -1623,21 +1633,21 @@ SceneOutliner.TimeStamp=2021.03.19-17.33.21
 SceneOutliner.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2021.03.19-17.33.16
 HierarchicalLODOutliner.LastCompileMethod=External
-BlueprintGraph.TimeStamp=2021.03.09-16.56.37
+BlueprintGraph.TimeStamp=2021.03.19-17.33.12
 BlueprintGraph.LastCompileMethod=External
 Voice.TimeStamp=2021.03.19-17.33.24
 Voice.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2021.03.19-17.33.18
 MovieSceneCapture.LastCompileMethod=External
-ExternalImagePicker.TimeStamp=2021.03.09-13.23.40
-ExternalImagePicker.LastCompileMethod=Unknown
-HierarchicalLODUtilities.TimeStamp=2021.03.09-13.23.42
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2021.03.19-17.33.15
+ExternalImagePicker.LastCompileMethod=External
+HierarchicalLODUtilities.TimeStamp=2021.03.19-17.33.16
+HierarchicalLODUtilities.LastCompileMethod=External
 MaterialEditor.TimeStamp=2021.03.09-13.23.47
 MaterialEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2021.03.09-16.56.42
 TextureEditor.LastCompileMethod=Unknown
-SequencerWidgets.TimeStamp=2021.03.09-16.56.42
+SequencerWidgets.TimeStamp=2021.03.19-17.33.21
 SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
@@ -1646,16 +1656,16 @@ MRUItem1=/Game/Levels/MainMenu/MainMenu
 MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/Maps/Swamp
 MRUItem1=/Game/UI/MainMenu
-MRUItem2=/Game/UI/PauseMenu
-MRUItem3=/Game/Levels/MainMenu/MainMenu
-MRUItem4=/Game/Maps/Swamp
-MRUItem5=/Game/UI/NewWidgetBlueprint
-MRUItem6=/Game/ThirdPersonBP/Flipbooks/Art/mouse
-MRUItem7=/Game/ThirdPersonBP/Flipbooks/Art/mouse_Sprite
-MRUItem8=/Game/ThirdPersonBP/Flipbooks/Art/mouse_Flipbook
-MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem2=/Game/Levels/MainMenu/MainMenu
+MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem4=/Game/UI/PauseMenu
+MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem6=/Game/UI/NewWidgetBlueprint
+MRUItem7=/Game/ThirdPersonBP/Flipbooks/Art/mouse
+MRUItem8=/Game/ThirdPersonBP/Flipbooks/Art/mouse_Sprite
+MRUItem9=/Game/ThirdPersonBP/Flipbooks/Art/mouse_Flipbook
 MRUItem10=/Game/Flipbooks/Art/mouse_Flipbook
 
 [AssetEditorToolkitTabLocation]
@@ -1729,7 +1739,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
-Object=
+Object="\"Object.Appearance.Brush\" "
 GeomModifier_Pen="\"Object.Settings\" "
 GeomModifier_Clip="\"Object.Settings\" "
 CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
@@ -1737,14 +1747,15 @@ PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.NavMovement.NavAgentProps\" "
 ActorComponent=
-TextBlock="\"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Visual="\"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-Button="\"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-ContentWidget="\"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
-PanelWidget="\"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+Widget="\"Object.Appearance.Brush\" "
+Visual="\"Object.Appearance.Brush\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.BackgroundColor\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.BackgroundColor\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.BackgroundColor\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[21]\" "
+Image="\"Object.Appearance.Brush\" "
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1905,6 +1916,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,In
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [UMGEditor.Designer]
 PreviewWidth=1280
