--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
-ContentBrowserTab1.SelectedPaths=/Game/Levels/MainMenu
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -784,11 +784,11 @@ Image.Localization=True
 Image.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=205.000 Y=10.000
-WindowSize=X=1499.000 Y=1020.000
+ScreenPosition=X=204.800 Y=9.600
+WindowSize=X=1500.800 Y=1021.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -805,7 +805,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Jeremy/Downloads/Mouse_Tale-main/Mouse_Tale-main/A_Mouse_Tale/Content/Levels/MainMenu
+UNR=../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -1657,8 +1657,8 @@ MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Maps/Swamp
-MRUItem1=/Game/UI/MainMenu
-MRUItem2=/Game/Levels/MainMenu/MainMenu
+MRUItem1=/Game/Levels/MainMenu/MainMenu
+MRUItem2=/Game/UI/MainMenu
 MRUItem3=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 MRUItem4=/Game/UI/PauseMenu
 MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
