--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -176,7 +176,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/Maps/Swamp
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -850,7 +850,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=204.000 Y=8.800
-WindowSize=X=1501.600 Y=1022.400
+WindowSize=X=1503.200 Y=1024.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -867,7 +867,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Unreal Projects/MouseTale/Mouse_Tale/A_Mouse_Tale/Content/Maps
+UNR=../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -1718,16 +1718,16 @@ MRUItem1=/Game/Levels/MainMenu/MainMenu
 MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Sprites/treetop_Mat
-MRUItem1=/Game/Sprites/Mushroom_Trunk_Short
-MRUItem2=/Game/Sprites/SourceTextures/mushroom-trunk
-MRUItem3=/Game/Sprites/SourceTextures/mushroom-top
-MRUItem4=/Game/Sprites/SourceTextures/cattails
-MRUItem5=/Game/Sprites/SourceTextures/mushrooms
-MRUItem6=/Game/Sprites/Mushroom_Red_Tiny
-MRUItem7=/Game/Sprites/Mushroom_top
-MRUItem8=/Game/Sprites/cattails_Array
-MRUItem9=/Game/Maps/Swamp
+MRUItem0=/Game/Maps/Swamp
+MRUItem1=/Game/Sprites/treetop_Mat
+MRUItem2=/Game/Sprites/Mushroom_Trunk_Short
+MRUItem3=/Game/Sprites/SourceTextures/mushroom-trunk
+MRUItem4=/Game/Sprites/SourceTextures/mushroom-top
+MRUItem5=/Game/Sprites/SourceTextures/cattails
+MRUItem6=/Game/Sprites/SourceTextures/mushrooms
+MRUItem7=/Game/Sprites/Mushroom_Red_Tiny
+MRUItem8=/Game/Sprites/Mushroom_top
+MRUItem9=/Game/Sprites/cattails_Array
 MRUItem10=/Game/Levels/MainMenu/MainMenu
 MRUItem11=/Game/UI/MainMenu
 MRUItem12=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
