Added more swamp assets including a temporary set for the frog house to gauge size

--- a/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/A_Mouse_Tale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -125,6 +125,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 GridEnabled=False
 SnapScaleEnabled=False
+CurrentRotGridSize=0
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=False
@@ -147,7 +148,7 @@ ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Materials
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Sprites
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -162,7 +163,7 @@ ContentBrowserTab2.ActiveTypeFilters=
 ContentBrowserTab2.EnabledTypeFilters=
 ContentBrowserTab2.ActiveFrontendFilters=
 ContentBrowserTab2.EnabledFrontendFilters=
-ContentBrowserTab2.SelectedPaths=/Engine/EngineResources
+ContentBrowserTab2.SelectedPaths=/Game/Sprites
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.CollectionsExpanded=True
 ContentBrowserTab2.SelectedCollections=
@@ -844,13 +845,17 @@ MaterialExpressionConstant3Vector.MaterialExpression=True
 MaterialExpressionTextureObjectParameter.General=True
 MaterialExpressionTextureObjectParameter.MaterialExpression=True
 MaterialExpressionTextureObjectParameter.MaterialExpressionTextureBase=True
+PaperExtractSpriteGridSettings.Grid=True
+Actor.Input=True
+Actor.Collision=True
+Actor.Rendering=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=204.000 Y=8.800
-WindowSize=X=1503.200 Y=1024.000
+ScreenPosition=X=204.000 Y=8.000
+WindowSize=X=1503.000 Y=1024.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -867,7 +872,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/Maps
+UNR=../../../../../../Unreal Projects/MouseTale/Mouse_Tale/A_Mouse_Tale/Content/Maps
 BRUSH=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBX=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
 FBXAnim=../../../../../../Documents/GitHub/Mouse_Tale/A_Mouse_Tale/Content/
@@ -1718,26 +1723,26 @@ MRUItem1=/Game/Levels/MainMenu/MainMenu
 MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Swamp
-MRUItem1=/Game/Sprites/treetop_Mat
-MRUItem2=/Game/Sprites/Mushroom_Trunk_Short
-MRUItem3=/Game/Sprites/SourceTextures/mushroom-trunk
-MRUItem4=/Game/Sprites/SourceTextures/mushroom-top
-MRUItem5=/Game/Sprites/SourceTextures/cattails
-MRUItem6=/Game/Sprites/SourceTextures/mushrooms
-MRUItem7=/Game/Sprites/Mushroom_Red_Tiny
-MRUItem8=/Game/Sprites/Mushroom_top
-MRUItem9=/Game/Sprites/cattails_Array
-MRUItem10=/Game/Levels/MainMenu/MainMenu
-MRUItem11=/Game/UI/MainMenu
-MRUItem12=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem13=/Game/UI/PauseMenu
-MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem15=/Game/UI/NewWidgetBlueprint
-MRUItem16=/Game/ThirdPersonBP/Flipbooks/Art/mouse
-MRUItem17=/Game/ThirdPersonBP/Flipbooks/Art/mouse_Sprite
-MRUItem18=/Game/ThirdPersonBP/Flipbooks/Art/mouse_Flipbook
-MRUItem19=/Game/Flipbooks/Art/mouse_Flipbook
+MRUItem0=/Game/Sprites/Mushroom_Trunk_Medium
+MRUItem1=/Game/Sprites/Mushroom_Red_Top
+MRUItem2=/Game/Sprites/SourceTextures/Mushroom_Medium_Skirt1
+MRUItem3=/Game/Sprites/SourceTextures/Mushroom_Large_Skirt4
+MRUItem4=/Game/Sprites/SourceTextures/mushroom-skirt_Sprite_8
+MRUItem5=/Game/Sprites/SourceTextures/mushroom-skirt_Sprite_5
+MRUItem6=/Game/Sprites/SourceTextures/ice-pillar_Sprite_0
+MRUItem7=/Game/Maps/Swamp
+MRUItem8=/Game/Sprites/treetop_Mat
+MRUItem9=/Game/Sprites/Mushroom_Trunk_Short
+MRUItem10=/Game/Sprites/SourceTextures/mushroom-trunk
+MRUItem11=/Game/Sprites/SourceTextures/mushroom-top
+MRUItem12=/Game/Sprites/SourceTextures/cattails
+MRUItem13=/Game/Sprites/SourceTextures/mushrooms
+MRUItem14=/Game/Sprites/Mushroom_Red_Tiny
+MRUItem15=/Game/Sprites/Mushroom_top
+MRUItem16=/Game/Sprites/cattails_Array
+MRUItem17=/Game/Levels/MainMenu/MainMenu
+MRUItem18=/Game/UI/MainMenu
+MRUItem19=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
@@ -1760,6 +1765,10 @@ None=======
 /Game/Sprites/SourceTextures/mushroom-top.mushroom-top=1
 /Game/Sprites/SourceTextures/mushroom-trunk.mushroom-trunk=1
 /Game/Sprites/Mushroom_Trunk_Short.Mushroom_Trunk_Short=1
+/Game/Sprites/SourceTextures/Mushroom_Large_Skirt4.Mushroom_Large_Skirt4=1
+/Game/Sprites/SourceTextures/Mushroom_Medium_Skirt1.Mushroom_Medium_Skirt1=1
+/Game/Sprites/Mushroom_Trunk_Medium.Mushroom_Trunk_Medium=1
+/Game/Sprites/Mushroom_Red_Top.Mushroom_Red_Top=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1798,26 +1807,26 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
-RecentlyPlaced=/Game/Sprites/Mushroom_White_Tiny.Mushroom_White_Tiny;
-RecentlyPlaced=/Game/Sprites/Mushroom_White_Small.Mushroom_White_Small;
-RecentlyPlaced=/Game/Sprites/Mushroom_Red_Top.Mushroom_Red_Top;
-RecentlyPlaced=/Game/Sprites/Mushroom_Turnk_Tall.Mushroom_Turnk_Tall;
-RecentlyPlaced=/Game/Sprites/Mushroom_Trunk_Medium.Mushroom_Trunk_Medium;
-RecentlyPlaced=/Game/Sprites/Mushroom_Purple_Tiny.Mushroom_Purple_Tiny;
-RecentlyPlaced=/Game/Sprites/Cattail_Straight.Cattail_Straight;
-RecentlyPlaced=/Game/Sprites/Cattail_Medium.Cattail_Medium;
-RecentlyPlaced=/Game/Sprites/Cattail_Bent.Cattail_Bent;
-RecentlyPlaced=/Game/Sprites/Mushroom_Trunk_Short.Mushroom_Trunk_Short;/Engine/Transient.PaperSpriteActorFactory_0
-RecentlyPlaced=/Game/Sprites/Mushroom_Brown_Small2.Mushroom_Brown_Small2;
-RecentlyPlaced=/Game/Sprites/Mushroom_Brown_Small1.Mushroom_Brown_Small1;
-RecentlyPlaced=/Game/Sprites/Mushroom_Purple_Small.Mushroom_Purple_Small;
-RecentlyPlaced=/Game/Sprites/Mushroom_Red_Small.Mushroom_Red_Small;
-RecentlyPlaced=/Game/Sprites/Mushroom_Red_Tiny.Mushroom_Red_Tiny;
-RecentlyPlaced=/Game/Sprites/Mushroom_Shelf3.Mushroom_Shelf3;
-RecentlyPlaced=/Game/Sprites/Mushroom_Shelf2.Mushroom_Shelf2;
-RecentlyPlaced=/Game/Sprites/Mushroom_Shelf1.Mushroom_Shelf1;
-RecentlyPlaced=/Game/Sprites/treetop_Mat.treetop_Mat;
-RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
+RecentlyPlaced=/Game/Sprites/Lilypad_Cluster.Lilypad_Cluster;
+RecentlyPlaced=/Game/Sprites/Lilypad_Small.Lilypad_Small;
+RecentlyPlaced=/Game/Sprites/Lilypad_Large.Lilypad_Large;
+RecentlyPlaced=/Game/Sprites/Vine5.Vine5;
+RecentlyPlaced=/Game/Sprites/Vine7.Vine7;
+RecentlyPlaced=/Game/Sprites/Vine4.Vine4;
+RecentlyPlaced=/Game/Sprites/Vine1.Vine1;
+RecentlyPlaced=/Game/Sprites/froghouse-windowcover_Sprite.froghouse-windowcover_Sprite;
+RecentlyPlaced=/Game/Sprites/froghouse-roof_Sprite.froghouse-roof_Sprite;
+RecentlyPlaced=/Game/Sprites/SourceTextures/froghouse-roof.froghouse-roof;
+RecentlyPlaced=/Game/Sprites/froghouse-side_Sprite.froghouse-side_Sprite;
+RecentlyPlaced=/Game/Sprites/SourceTextures/froghouse-side.froghouse-side;
+RecentlyPlaced=/Game/Sprites/froghouse-stilt_Sprite.froghouse-stilt_Sprite;
+RecentlyPlaced=/Game/Sprites/froghouse-front_Sprite.froghouse-front_Sprite;
+RecentlyPlaced=/Game/Sprites/SourceTextures/froghouse-front.froghouse-front;
+RecentlyPlaced=/Game/Sprites/Ice_Pillar_Top.Ice_Pillar_Top;
+RecentlyPlaced=/Game/Sprites/Ice_Pillar_Side2.Ice_Pillar_Side2;
+RecentlyPlaced=/Game/Sprites/Ice_Pillar_Side1.Ice_Pillar_Side1;
+RecentlyPlaced=/Game/Sprites/Mushroom_Large_Skirt3.Mushroom_Large_Skirt3;
+RecentlyPlaced=/Game/Sprites/Mushroom_Large_Skirt2.Mushroom_Large_Skirt2;
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -1851,8 +1860,8 @@ PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.N
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[21]\" "
 Image="\"Object.Appearance.Brush\" "
 PaperSprite="\"Object.Rendering.RenderGeometry\" "
-PaperSpriteActor="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PaperGroupedSpriteActor="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PaperSpriteActor=
+PaperGroupedSpriteActor=
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 MaterialExpression=
 
